# AL_DZ

Accounting_fee/: Abstract.h  Accounting_fee.cpp  Home.h  Street.h
DZ/: Документация.txt  Инструкция по сборке.txt  Описание программы.txt
DZ/Client/: CMakeLists.txt  main.cpp
DZ/Server/: Acceptor.cpp  Acceptor.h  DZ_AL.pro  DZ_AL.pro.user.d37fddf  DZ_AL.pro.user.ef6a79c  DZ_AL.pro.user.f732416  Factor.cpp  Factor.h  Service.cpp  Service.h  binom.cpp  binom.h  calchistory.cpp  calchistory.h  calchistory.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h
lab7/: ALARM.cpp  lab7_Deadlock.cpp  lab7_MT-NOSYNC.cpp  lab7_SYNC.cpp  lab7_WAIT.cpp
